Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-6010

DLC: LNetFini() assert is hit if lustre_rmmod without bringing down NI

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.7.0
    • Lustre 2.7.0
    • 3
    • 16752

      if lnet is not brought down properly (IE: lctl network down or lnetctl lnet unconfigure), then LNetFini():LASSERT(the_lnet.ln_refcount == 0); is hit. We need to modify this assert to account for this scenario. This wasn't a problem before because a network was always loaded irregardless. and LNetNIFini() was always called to set ln_refcoutn to 0

            ashehata Amir Shehata (Inactive)
            ashehata Amir Shehata (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: